[gd_scene load_steps=13 format=2]

[ext_resource path="res://Graphics/Windowskins/frlgtextskin.png" type="Texture" id=1]
[ext_resource path="res://Utilities/Dialogue Box.gd" type="Script" id=2]
[ext_resource path="res://Utilities/Dialogue Box Text Slide.tres" type="Animation" id=3]
[ext_resource path="res://Fonts/pkmnem.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Graphics/Pictures/pause.png" type="Texture" id=5]
[ext_resource path="res://Utilities/Dialogue Box Arrow.tres" type="Animation" id=6]
[ext_resource path="res://Audio/SE/Choose.WAV" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "MultiText"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "FirstLinePrinted"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "SingleText"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished"
} ]
}

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "Text"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "second_line_printed"
} ]
}

[node name="Dialogue Box" type="NinePatchRect"]
pause_mode = 2
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -104.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 1 )
region_rect = Rect2( 8, 2, 66, 74 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Slide Text" = ExtResource( 3 )

[node name="Text1" type="RichTextLabel" parent="."]
margin_left = 17.0
margin_top = 15.0
margin_right = 462.0
margin_bottom = 50.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Sample text."
meta_underlined = false
text = "Sample text."
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Text1"]
anims/MultiText = SubResource( 2 )
anims/SingleText = SubResource( 3 )

[node name="Text2" type="RichTextLabel" parent="."]
margin_left = 17.0
margin_top = 50.0
margin_right = 462.0
margin_bottom = 85.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Sample text"
meta_underlined = false
text = "Sample text"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Text2"]
anims/Text = SubResource( 5 )

[node name="PauseArrow" type="Sprite" parent="."]
position = Vector2( 470, 66 )
texture = ExtResource( 5 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseArrow"]
autoplay = "Arrow"
anims/Arrow = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
